feat: Split Interface into separate handlers for oapi-codegen
