# backend/api/product/products_hanlder.go
@@ -1,4 +1,4 @@
-package api
+package product
 
 import (
 	"net/http"
@@ -10,34 +10,7 @@ type ProductsServer struct {
 	ServerId int
 }
 
-func (server *ProductsServer) GetTest(c *gin.Context) {
-	rows, err := DB.Query("SELECT user_id, name, email FROM public.m_users")
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to query database"})
-		return
-	}
-	defer rows.Close()
-
-	var users []User
-	for rows.Next() {
-		var user User
-		err := rows.Scan(&user.UserId, &user.UserName, &user.Email)
-		if err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to scan row"})
-			return
-		}
-		users = append(users, user)
-	}
-
-	if len(users) == 0 {
-		c.JSON(http.StatusNotFound, gin.H{"message": "No data found"})
-		return
-	}
-
-	c.JSON(http.StatusOK, users)
-}
-
-func (server *ProductsServer) GetProducts(c *gin.Context, params GetProductsParams) {
+func (server *ProductsServer) GetProductList(c *gin.Context, params GetProductListParams) {
 	// TODO: 値をデータベースから取得するロジックを作成する。
 	availability := "In Stock"
 	imageUrl := "https://example.com/images/simple_gorilla.jpg"
@@ -75,7 +48,7 @@ func (server *ProductsServer) GetProducts(c *gin.Context, params GetProductsPara
 	c.JSON(http.StatusOK, responseBody)
 }
 
-func (server *ProductsServer) GetProductsProductId(c *gin.Context, productId ProductId) {
+func (server *ProductsServer) GetProductDetail(c *gin.Context, productId ProductId) {
 	// 仮のデータ（通常はデータベースなどから取得）
 	availability := "In Stock"
 	imageUrl := "https://example.com/images/simple_gorilla.jpg"
